--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "ts-node": "^10.9.2"
   },
   "scripts": {
-    "test": "npx cucumber-js test",
-    "all": "npx cucumber-js features/*.feature",
+    "all": "npx cucumber-js ./modules/**/*.feature",
+    "administration": "npx cucumber-js ./modules/administration/Administration.feature",
     "login": "npx cucumber-js ./modules/login/Login.feature",
-    "funds": "npx cucumber-js ./modules/funds/Funds.feature",
-    "administration": "npx cucumber-js ./modules/administration/Administration.feature"
+    "transfer": "npx cucumber-js ./modules/transfer/Transfer.feature"
   },
   "dependencies": {
     "playwright": "^1.44.1",
